# trip-planner-agent

./: .gitignore  README.md  pyrightconfig.json
backend/: .env.example  README.md  manage.py  pyproject.toml  test.sqlite3
backend/planner/: authentication.py  models.py
backend/planner/api/: urls.py  views.py
backend/planner/domain/: exceptions.py  schemas.py
backend/planner/graph/: nodes.py  workflow.py
backend/planner/integrations/: amap.py  baidu.py  base.py  qwen.py
backend/planner/management/: __init__.py
backend/planner/migrations/: 0001_initial.py  0002_authcode_failed_attempts.py  0003_delete_authcode_remove_plannerrunrecord_owner_and_more.py  0004_delete_analyticsevent.py  0005_drop_transient_auth_tables.py  0006_assistant_conversations_and_plan_source_job.py  0007_knowledge_base_records.py  0008_alter_knowledgedocumentrecord_object_key.py  0009_knowledgedocumentrecord_progress_fields.py  0010_knowledgedocumentrecord_file_size_bytes.py  0011_remove_unused_schema_fields.py  0012_rename_planner_kno_is_defa_11e9d3_idx_planner_kno_is_defa_8f7d9a_idx_and_more.py
backend/planner/services/: assistant_service.py  assistant_store.py  auth_service.py  auth_state_store.py  chat_session_store.py  event_store.py  job_store.py  knowledge_base_service.py  live_data.py  (+9 more)
backend/tests/: conftest.py  test_api.py  test_assets.py  test_integrations.py  test_workflow.py
backend/trip_planner_backend/: __init__.py  asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/trip_planner_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+177 files in other folders)
