[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trip-planner-backend"
version = "0.1.0"
description = "Django backend for a LangChain + LangGraph travel planning agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Django>=5.1,<6.0",
  "djangorestframework>=3.15,<4.0",
  "pydantic>=2.8,<3.0",
  "PyMySQL>=1.1,<2.0",
  "redis>=5.0,<6.0",
  "cryptography>=44.0,<45.0",
  "requests>=2.32,<3.0",
  "langchain>=0.3,<0.4",
  "langchain-openai>=0.2,<0.3",
  "langgraph>=0.2,<0.3",
  "chromadb>=0.5,<0.6",
  "minio>=7.2,<8.0",
  "sentence-transformers>=3.0,<4.0",
  "pypdf>=5.0,<6.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
